--- a/FilipeNobrega/Views/TileSection/Experience/Experience.storyboard
+++ b/FilipeNobrega/Views/TileSection/Experience/Experience.storyboard
@@ -64,26 +64,12 @@
                                                 <constraint firstAttribute="bottom" secondItem="368-aU-On2" secondAttribute="bottom" id="rQi-pK-mGn"/>
                                             </constraints>
                                         </view>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Axa-Mp-LtQ">
-                                            <rect key="frame" x="354" y="10" width="50" height="50"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="50" id="3mJ-Gx-inh"/>
-                                                <constraint firstAttribute="width" constant="50" id="bAJ-wi-dhz"/>
-                                            </constraints>
-                                            <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
-                                            <state key="normal" image="close"/>
-                                            <connections>
-                                                <action selector="close:" destination="LR6-yN-j6C" eventType="touchUpInside" id="IIY-4E-AKm"/>
-                                            </connections>
-                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstItem="Axa-Mp-LtQ" firstAttribute="top" secondItem="LuV-y1-xAI" secondAttribute="top" constant="10" id="9sa-CM-vt0"/>
                                         <constraint firstItem="QIO-CQ-wez" firstAttribute="leading" secondItem="LuV-y1-xAI" secondAttribute="leading" id="OKa-DD-5vI"/>
                                         <constraint firstItem="QIO-CQ-wez" firstAttribute="top" secondItem="LuV-y1-xAI" secondAttribute="top" id="cCs-Cn-sQA"/>
                                         <constraint firstAttribute="trailing" secondItem="QIO-CQ-wez" secondAttribute="trailing" id="ihZ-pA-p1Y"/>
-                                        <constraint firstAttribute="trailing" secondItem="Axa-Mp-LtQ" secondAttribute="trailing" constant="10" id="x0o-Ol-m2K"/>
                                     </constraints>
                                 </view>
                                 <prototypes>
@@ -159,6 +145,18 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Axa-Mp-LtQ">
+                                <rect key="frame" x="354" y="30" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="3mJ-Gx-inh"/>
+                                    <constraint firstAttribute="width" constant="50" id="bAJ-wi-dhz"/>
+                                </constraints>
+                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                <state key="normal" image="close"/>
+                                <connections>
+                                    <action selector="close:" destination="LR6-yN-j6C" eventType="touchUpInside" id="IIY-4E-AKm"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -166,6 +164,8 @@
                             <constraint firstItem="4gp-7T-EwT" firstAttribute="leading" secondItem="ycQ-MC-RWd" secondAttribute="leading" id="Ksn-3n-9Br"/>
                             <constraint firstItem="ycQ-MC-RWd" firstAttribute="bottom" secondItem="4gp-7T-EwT" secondAttribute="bottom" id="dDk-J5-fUd"/>
                             <constraint firstItem="ycQ-MC-RWd" firstAttribute="trailing" secondItem="4gp-7T-EwT" secondAttribute="trailing" id="nE4-jB-Abu"/>
+                            <constraint firstItem="ycQ-MC-RWd" firstAttribute="trailing" secondItem="Axa-Mp-LtQ" secondAttribute="trailing" constant="10" id="pZU-ff-LLs"/>
+                            <constraint firstItem="Axa-Mp-LtQ" firstAttribute="top" secondItem="ycQ-MC-RWd" secondAttribute="top" constant="10" id="uJi-WC-Xki"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ycQ-MC-RWd"/>
                     </view>
