--- a/FilipeNobrega/Views/TileSection/SimpleText/FreeText.storyboard
+++ b/FilipeNobrega/Views/TileSection/SimpleText/FreeText.storyboard
@@ -75,9 +75,9 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="4LN-eg-uF0" firstAttribute="trailing" secondItem="wSz-B4-vh3" secondAttribute="trailing" constant="10" id="7cx-3U-fPh"/>
                             <constraint firstItem="4LN-eg-uF0" firstAttribute="bottom" secondItem="kgU-89-ap4" secondAttribute="bottom" id="9hE-Jg-F3W"/>
-                            <constraint firstItem="wSz-B4-vh3" firstAttribute="top" secondItem="4LN-eg-uF0" secondAttribute="top" constant="10" id="UvT-t2-k3S"/>
-                            <constraint firstItem="4LN-eg-uF0" firstAttribute="trailing" secondItem="wSz-B4-vh3" secondAttribute="trailing" constant="10" id="bcz-l9-Ocx"/>
+                            <constraint firstItem="wSz-B4-vh3" firstAttribute="top" secondItem="4LN-eg-uF0" secondAttribute="top" constant="10" id="bAf-Vm-c0C"/>
                             <constraint firstItem="kgU-89-ap4" firstAttribute="leading" secondItem="4LN-eg-uF0" secondAttribute="leading" id="mZ4-f0-fhD"/>
                             <constraint firstItem="4LN-eg-uF0" firstAttribute="trailing" secondItem="kgU-89-ap4" secondAttribute="trailing" id="n3B-0D-OmN"/>
                             <constraint firstItem="kgU-89-ap4" firstAttribute="top" secondItem="4LN-eg-uF0" secondAttribute="top" id="zhH-Cp-oXf"/>
